@@ -31,6 +31,9 @@ JH/06 Bug 2275: The MIME ACL unlocked the received message files early, and
 JH/08 When generating a selfsigned cert, use serial number 1 since zero is not
       legitimate.
 
+JH/09 Bug 2274: Fix logging of cmdline args when starting in an unlinked cwd.
+      Previously this would segfault.
+
 
 Exim version 4.91
 -----------------
